2008-11-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_acceptcaps):
	Rename a variable to make the code clearer.

2008-11-21  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gstidentity.c:
	Don't warning on offset==-1. Taken from _check_imperfect_offset().

2008-11-21  Michael Smith <msmith@songbirdnest.com>

	* plugins/elements/gstfilesrc.c:
	  Check for localhost in URI was backwards, fix it. Fixes unit test.

2008-11-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c: (gst_base_transform_init),
	(gst_base_transform_getcaps), (gst_base_transform_find_transform),
	(gst_base_transform_acceptcaps), (gst_base_transform_getrange):
	Add beginnings of a more optimized acceptcaps function than the default
	core one.

2008-11-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstpad.c: (gst_pad_accept_caps):
	Avoid getting the acceptcaps function too early.

2008-11-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tools/gst-launch.c: (event_loop):
	Make gst-launch handle LATENCY messages and make it recalculate the
	latency.

2008-11-20  Michael Smith <msmith@songbirdnest.com>

	* plugins/elements/gstfilesrc.c:
	  Use g_filename_from_uri() for URI parsing in filesrc rather than rolling
	  out own slightly incorrect version. Fixes use of some paths on
	  win32.

2008-11-20  Michael Smith <msmith@songbirdnest.com>

	* gst/gstregistrybinary.c:
	  In win32 codepath, if we fail to write the registry, create the
	  directory for it and try again, matching the behaviour in non-win32
	  codepaths.

2008-11-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_set_render_delay):
	Changing the render delay changes the latency and so we must post a
	latency message.

2008-11-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstquery.c:
	* gst/gstquery.h:
	Add GstQueryType for custom queries instead of having to use the