@@ -1,3 +1,11 @@
+2008-11-24  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
+	Patch by: Simon Holm Thøgersen <odie at cs dot aau dot dk>
+
+	* gst/gstregistry.c: (gst_registry_scan_path_level):
+	Reduce the number of stat() calls for every file from three times
+	to one time. Fixes bug #560360.
+
 2008-11-22  Wim Taymans  <wim.taymans@collabora.co.uk>
 
 	* libs/gst/base/gstbasetransform.c:
